# jjik

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: code_gen.rs  driver.rs  gg.rs  lib.rs  main.rs  parse_table.rs
src/gg/: error.rs  lexer.rs  parser.rs
test/fixtures/: simple_calculator.gg
